@@ -277,6 +277,7 @@
 #define ATTR_jobforcecanceltime "job_force_cancel_time"
 #define ATTR_maxarraysize    "max_job_array_size"
 #define ATTR_maxslotlimit    "max_slot_limit"
+#define ATTR_recordjobinfo   "record_job_info"
 #ifdef MUNGE_AUTH
   #define ATTR_authusers       "authorized_users"
 #endif
