@@ -181,6 +181,7 @@ enum srv_atr
   SRV_ATR_JobForceCancelTime,
   SRV_ATR_MaxArraySize,
   SRV_ATR_MaxSlotLimit,
+  SRV_ATR_RecordJobInfo,
 #ifdef MUNGE_AUTH
   SRV_ATR_authusers,
 #endif
