@@ -1076,6 +1076,19 @@ attribute_def svr_attr_def[] = {
    ATR_TYPE_LONG,
    PARENT_TYPE_SERVER},
 
+  /* SRV_ATR_RecordJobInfo */
+  {  ATTR_recordjobinfo,         /* record_job_info */
+     decode_b,
+     encode_b,
+     set_b,
+     comp_b,
+     free_null,
+     NULL_FUNC,
+     MGR_ONLY_SET,
+     ATR_TYPE_LONG,
+     PARENT_TYPE_SERVER
+  },
+
 #ifdef MUNGE_AUTH
   /* SRV_ATR_authusers */
   {ATTR_authusers,		/* "autorized_users" */
